<resources>
    <string name="app_name">BIM</string>
    <string name="title_bar_back">返回</string>
    <string name="title_bar_menu">菜单</string>
    <string name="title_bar_title">标题</string>
    <string name="send">发送</string>
    <string name="text_tmp">示例文字</string>
    <string name="text_tmp_long">示例文字示例文字示例文字示例文字示例文字
        示例文字示例文字示例文字示例文字示例文字示例文字示例文字示例文字</string>
    <string name="main_activity">主界面</string>
    <string name="launcher_activity">启动界面</string>
    <string name="message_activity">消息界面</string>
    <string name="info_detail_activity">资料界面</string>
    <string name="address_book_activity">通讯录界面</string>
    <string name="web_activity">web view</string>
    <string name="login_activity">登陆界面</string>
    <string name="find_friend_activity">查找好友界面</string>
    <string name="bim_id">ID：</string>
    <string name="sex">性别：</string>
    <string name="age">年龄：</string>
    <string name="email">邮箱：</string>
    <string name="brief_introduce">简介：</string>
    <string name="add_friend">加好友</string>
    <string name="send_message">发消息</string>
    <string name="delete_friend">删除好友</string>
    <string name="find_friend">查找好友</string>
    <string name="address_book">通讯录</string>
    <string name="search">搜索</string>
    <string name="clear_message">清空消息</string>
    <string name="search_hint">输入id, email, name..</string>
    <string name="login_id_hint">账号/邮箱/手机</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="sign_up">注册新账号</string>
    <string name="forget_password">忘记密码？</string>
    <string name="wrong_name_or_password">用户名或密码错误,请重试</string>
    <string name="my_info">我的资料</string>
    <string name="logout">退出账号</string>
    <string name="settings">设置</string>
    <string name="about_bim">关于BIM</string>
    <string name="check_update">更新</string>
    <string name="feedback">信息反馈</string>
    <string name="welfare">福利</string>
    <string name="email_tmp">snx1788@gmail.com</string>
    <string name="name_tmp">TOM</string>
    <string name="title_activity_nav_test">NavTestActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="system">系统</string>
    <string name="home_page">首页</string>
    <string name="add_new">添加</string>
    <string name="edit">编辑</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
