<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/bg1"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/login_main_layout"
        android:orientation="vertical"
        android:padding="30dp"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/app_name"
            android:textSize="36sp"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/login_user_id"
            android:textColor="@color/colorWhite"
            android:maxLines="1"
            android:inputType="text"
            android:background="@color/colorTransparent"
            android:textColorHint="@color/colorWhite"
            android:hint="@string/login_id_hint"
            android:layout_width="match_parent"
            android:layout_height="50dp" />
        
        <EditText
            android:id="@+id/login_password"
            android:textColor="@color/colorWhite"
            android:maxLines="1"
            android:background="@color/colorTransparent"
            android:textColorHint="@color/colorWhite"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="50dp" />
        
        <Button
            android:id="@+id/login_button"
            android:text="@string/login"
            android:textSize="18sp"
            android:textColor="@color/colorWhite"
            android:background="@color/colorBlueLightTransparent"
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/login_forget_password"
                android:layout_weight="1"
                android:text="@string/forget_password"
                android:textColor="@color/colorBlueLight"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/login_sign_up"
                android:gravity="end"
                android:layout_weight="1"
                android:text="@string/sign_up"
                android:textColor="@color/colorBlueLight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

    <ProgressBar
        android:visibility="gone"
        android:id="@+id/login_progress_bar"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />



</LinearLayout>